--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <h1>Narendra Vaishnav</h1>
             <h3>And I'm a <span class="text"></span></h3>
             <p>I'm a Devops Engineer with extensive experience for over 3 Months.
-                <br>exprtise is to create a pipeline for Automated Testing , Building , Deployment , and any more....</p></br>
+                <br>exprtise is to create a pipeline for Automated Testing , Building , Deployment for Gitlab and any more....</p></br>
             <div class="home-sci">
                 <a href="#" style="--i:7"><i class='bx bxl-facebook'></i></a>
                 <a href="#" style="--i:8"><i class='bx bxl-instagram'></i></a>
